# zeitgeist__zeitgeist-datahub

./: .bzrignore  .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  compile.sh  config.vapi  configure.ac  recent-manager-provider.vala  zeitgeist-datahub.vala
doc/: Makefile.am
po/: POTFILES.in  es.po
src/: Makefile.am  configuration.vala  data-provider.vala  desktop-launch-listener.vala  downloads-directory-provider.vala  goa-1.0.vapi  google-authorizer.vapi  google-provider.c  google-provider.vala  kde-recent-document-provider.vala  recent-manager-provider.vala  telepathy-observer.vala  utils.vala  wrapper.vapi  zeitgeist-datahub.vala
